WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
178798
Web Inspector: Canvas Tab: main WebGL canvas on acko.net has no reported size
https://bugs.webkit.org/show_bug.cgi?id=178798
Summary
Web Inspector: Canvas Tab: main WebGL canvas on acko.net has no reported size
Blaze Burg
Reported
2017-10-25 09:48:04 PDT
STR: 1. Load acko.net 2. Open Web Inpector, Canvas Tab => Canvas 2 has no dimensions. Obviously, we are drawing the result buffer at a specific width/height, so that should be listed if the canvas element does not exist or has no size attributes.
Attachments
Screenshot
(481.93 KB, image/png)
2017-10-25 09:49 PDT
,
Blaze Burg
no flags
Details
Patch
(6.64 KB, patch)
2018-03-15 20:16 PDT
,
Devin Rousso
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2017-10-25 09:48:28 PDT
<
rdar://problem/35175740
>
Blaze Burg
Comment 2
2017-10-25 09:49:19 PDT
Created
attachment 324835
[details]
Screenshot
Devin Rousso
Comment 3
2018-03-15 20:16:32 PDT
Created
attachment 335921
[details]
Patch I'm putting this up for now to see how EWS reacts, but I plan on writing a test for this.
Blaze Burg
Comment 4
2018-03-15 22:19:16 PDT
Comment on
attachment 335921
[details]
Patch r=me
Blaze Burg
Comment 5
2018-03-15 22:23:39 PDT
(In reply to Devin Rousso from
comment #3
)
> Created
attachment 335921
[details]
> Patch > > I'm putting this up for now to see how EWS reacts, but I plan on writing a > test for this.
Writing a test => needs to reload test page => test will be flaky. Just don't bother. :| :| :|
WebKit Commit Bot
Comment 6
2018-03-16 00:01:06 PDT
Comment on
attachment 335921
[details]
Patch Clearing flags on attachment: 335921 Committed
r229659
: <
https://trac.webkit.org/changeset/229659
>
WebKit Commit Bot
Comment 7
2018-03-16 00:01:08 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug